P2/confs/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-one
  name: app-one-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  strategy: {}
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - image: paulbouwer/hello-kubernetes:1.10
        name: hello-kubernetes
        resources: {}
        ports:
        - containerPort: 8080
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-two
  name: app-two-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  strategy: {}
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - image: paulbouwer/hello-kubernetes:1.10
        name: hello-kubernetes
        resources: {}
        ports:
        - containerPort: 8080
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-three
  name: app-three-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  strategy: {}
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - image: paulbouwer/hello-kubernetes:1.10
        name: hello-kubernetes
        resources: {}
        ports:
        - containerPort: 8080
status: {}
